--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HyperCore - Home</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="https://luancostaf.github.io/HyperCore/styles/style.css">
 </head>
 <body>
     <table border="0">
