--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <tr>
             <td class="mouse"><img src="/assets/Mouse.png" width="80px" id="mouse" alt=""></td>  
                 <td class="keyboard">
-                    <a href="Keyboard.html"><img src="/assets/Keyboard.png" width="130px" id="keyboard"></a>
+                    <img src="/assets/Keyboard.png" width="130px" id="keyboard">
                 </td>
                 <td class="cabinet"><img src="/assets/Cabinet.png" alt="" id="cabinet"></td>
                 <td class="headset"><img src="/assets/Headset.png" id="headset" alt=""></td>
