--- a/Whoweare.html
+++ b/Whoweare.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HyperCore - Who we Are</title>
-    <link rel="stylesheet" href="/styles/whoweare.css">
+    <link rel="stylesheet" href="https://luancostaf.github.io/HyperCore/Whoweare.css">
 </head>
 <body>
     <table border="0">
