--- a/Monitor.html
+++ b/Monitor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HyperCore - Monitor</title>
-    <link rel="stylesheet" href="/styles/monitor.css">
+    <link rel="stylesheet" href="https://luancostaf.github.io/HyperCore/styles/monitor.css">
 </head>
 <body>
     <table border="1">
